--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=League+Spartan:wght@200;300;400;500;600;700;800;900&family=Outfit:wght@300;400;600&family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/855ffdf2d4.js" crossorigin="anonymous"></script>
     <title>Mourao</title>
-    <link rel="icon" type="image/x-icon" href="images/justhead.png">
+    <link rel="icon" type="image/x-icon" href="justhead.png">
 </head>
 <body>
   <!--   <video autoplay muted loop id="myVideo">
@@ -38,7 +38,7 @@
     <div class="main-section-wrapper">
         <div class="main-section">
 
-            <img src="images/justhead.png" alt="" id="showcase"> 
+            <img src="justhead.png" alt="" id="showcase"> 
          
         <div class="changing-text-container">
                <h1 id="specific">I make sites for </h1> 
